Screen overflow fix, point repeating fix, show previous operation, scientific notation when overflow

--- a/calculator.css
+++ b/calculator.css
@@ -54,6 +54,7 @@ input, button, textarea, :focus {
 
 body {
     overflow: hidden;
+    background: #000;
 }
 
 .calculator {
@@ -65,7 +66,7 @@ body {
   width: 400px;
   height: 200px;
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: 42px;
+  font-size: 36px;
   font-weight: 400;
   padding: 20px 20px;
   background-color: #111;
@@ -82,11 +83,17 @@ body {
 .screen > .accumulator {
   font-size: 63px;
   max-width: 400px;
-  word-wrap: break-word;
+  text-overflow: clip;
+  overflow: hidden;
+  white-space: nowrap;
   position: absolute;
   bottom: 0;
   right: 0;
   padding: 20px 20px;
+}
+
+.screen > .previous-operands {
+  opacity: .7;
 }
 
 .keypad {
